# videogame_cover_identification

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  env.example  pyproject.toml  requirements.txt
model_training/: build_index.py  train_finetune.py
src/: __init__.py  build_index.py  config.py  search_cover.py  train_finetune.py
src/indexing/: build.py
src/models/: clip_model.py  index.py
src/search/: search.py
src/training/: dataset.py  losses.py  train.py
src/utils/: data.py  image.py  paths.py
tests/: test_config.py  test_indexing_build.py  test_models_clip.py  test_models_index.py  test_search_search.py  test_training_dataset.py  test_training_losses.py  test_training_train.py  test_utils_data.py  test_utils_image.py  test_utils_paths.py
