[project]
name = "videogame-cover-identification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "APACHE 2.0" }
authros = [{ name = "Guilherme Jorge" }]
dependencies = [
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "faiss-cpu==1.12.0",
    "fastapi==0.116.1",
    "filelock==3.19.1",
    "fsspec==2025.7.0",
    "ftfy==6.3.1",
    "huggingface-hub==0.34.4",
    "idna==3.10",
    "jinja2==3.1.6",
    "lizard==1.17.31",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==2.2.6",
    "open-clip-torch==3.1.0",
    "opencv-python==4.12.0.88",
    "packaging==25.0",
    "pillow==11.3.0",
    "pre-commit==4.3.0",
    "pyyaml==6.0.2",
    "regex==2025.8.29",
    "requests==2.32.5",
    "safetensors==0.6.2",
    "setuptools==80.9.0",
    "sympy==1.13.1",
    "timm==1.0.19",
    "torch==2.5.1+cu121",
    "torchaudio==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "wcwidth==0.2.13",
]

[project.optional-dependencies]
dev = [
  "ruff==0.5.6",
  "black==24.8.0",
  "mypy==1.11.1",
  "types-requests==2.32.0.20240712",
  "types-python-dateutil==2.9.0.20240316",
  "pre-commit==4.3.0",
  "lizard==1.17.31",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src", "model_training"]
include = ["src*", "model_training*"]

[tool.ruff]
line-length = 100
target-version = "py39"
lint.select = [
  "E", "F", "W", "I",  # pycodestyle/pyflakes/imports
  "UP",                    # pyupgrade
  "B",                     # bugbear
  "N",                     # pep8-naming
]
lint.ignore = ["E203", "E501"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
